--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/index.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/index.html
@@ -304,7 +304,43 @@ layout("/layouts/blank.html",{title:"后台管理主页"}){
                 </div>
             </div>
         </div>
-
+        <!--消息提醒-->
+        <div class="drag-box col-lg-4 col-md-6 col-sm-6" sort-id="2">
+            <div class="box">
+                <div class="box-header drag-title">
+                    <h3 class="box-title">下一步计划</h3>
+                </div>
+                <div class="box-body border-radius-none" >
+                    <div style="margin: 5px">计划</div>
+                    <ul style="padding-left: 15px">
+                        <li>1、按照功能列表完善工作流</li>
+                        <li>2、按照功能列表添加在线报表</li>
+                        <li>3、重构、优化代码</li>
+                        <li>4、拆分为分布式项目</li>
+                    </ul>
+                    <div style="margin: 5px">试试走一下工作流</div>
+                    <ul style="padding-left: 15px">
+                        <li>按照这个顺序 zhansan -> wldao -> kezhang -> liyuanzhang  </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!--消息提醒-->
+        <div class="drag-box col-lg-4 col-md-6 col-sm-6" sort-id="2">
+            <div class="box">
+                <div class="box-header drag-title">
+                    <h3 class="box-title">请作者喝杯咖啡</h3>
+                </div>
+                <div class="box-body border-radius-none">
+                    <div>
+                        <span>100+</span>
+                        <a href='https://gitee.com/threefish/NutzFw/stargazers' target="_blank"><img alt='star' src='https://gitee.com/threefish/NutzFw/badge/star.svg?theme=white'></img></a>
+                        <span>开源工作流代码</span>
+                    </div>
+                   <img src="https://gitee.com/threefish/NutzCodeInsight/raw/master/image/donation.jpg" style="width: 100%;margin-top: 22px;">
+                </div>
+            </div>
+        </div>
         <!--消息提醒-->
         <div sort-id="2" class="drag-box col-lg-4 col-md-6 col-sm-6">
             <div class="box">
