add:工作流添加创建用户任务拦截器，实现自定义动态脚本赋值功能 add:加强工作流任务创建前后动态脚本执行 add:添加IocJavaBean人员范围查询选择 update:流程图优化 update:启动类优化

--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/inc/footer.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/inc/footer.html
@@ -2,6 +2,7 @@
     <div class="pull-right hidden-xs">
         <b>Version</b> ${sys.version}
     </div>
-    <strong>Copyright &copy; 2009-2018 <!--<a href="#">xx</a>-->.</strong> All rights
-    reserved.
+    Copyright &copy; 2017-${date(),dateFormat='yyyy'} <strong><a href="https://gitee.com/threefish/NutzFw"
+                                                                 target="_blank">NutzFw</a>.</strong>
+    All rights reserved.
 </footer>
