--- a/nutzfw-web-flowable/src/main/webapp/WEB-INF/view/modules/flow/model/design.html
+++ b/nutzfw-web-flowable/src/main/webapp/WEB-INF/view/modules/flow/model/design.html
@@ -57,7 +57,7 @@
         };
     </script>
 </head>
-<body ng-app="flowableModeler" ng-cloak>
+<body ng-app="flowableModeler" ng-cloak onload="parent.layer.close(parent.loadIndex);">
 
 <div class="navbar navbar-fixed-top navbar-inverse" id="main-header" role="navigation" style="display: none">
     <div class="fixed-container">
