--- a/nutzfw-web-flowable/src/main/webapp/WEB-INF/view/modules/flow/model/design.html
+++ b/nutzfw-web-flowable/src/main/webapp/WEB-INF/view/modules/flow/model/design.html
@@ -55,10 +55,15 @@
             'webContextRoot': '${base}/static/flowable-modeler/',
             'datesLocalization': false
         };
+
+        function onload() {
+            setTimeout(function () {
+                parent.vm.handleUnBlockUI();
+            }, 1000);
+        }
     </script>
 </head>
-<body ng-app="flowableModeler" ng-cloak onload="parent.layer.close(parent.loadIndex);">
-
+<body ng-app="flowableModeler" ng-cloak onload="onload()">
 <div class="navbar navbar-fixed-top navbar-inverse" id="main-header" role="navigation" style="display: none">
     <div class="fixed-container">
         <div class="navbar-header">
