update:工作流审核界面优化

--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/index.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/index.html
@@ -329,15 +329,14 @@ layout("/layouts/blank.html",{title:"后台管理主页"}){
         <div class="drag-box col-lg-4 col-md-6 col-sm-6" sort-id="2">
             <div class="box">
                 <div class="box-header drag-title">
-                    <h3 class="box-title">请作者喝杯咖啡</h3>
+                    <h3 class="box-title">
+                        开源不易，请作者喝杯咖啡或给一颗心
+                        <a href='https://gitee.com/threefish/NutzFw/stargazers' target="_blank"><img alt='star' src='https://gitee.com/threefish/NutzFw/badge/star.svg?theme=white'/></a>
+                        聊表心意，感谢！
+                    </h3>
                 </div>
                 <div class="box-body border-radius-none">
-                    <div>
-                        <span>100+</span>
-                        <a href='https://gitee.com/threefish/NutzFw/stargazers' target="_blank"><img alt='star' src='https://gitee.com/threefish/NutzFw/badge/star.svg?theme=white'></img></a>
-                        <span>开源工作流代码</span>
-                    </div>
-                   <img src="https://gitee.com/threefish/NutzCodeInsight/raw/master/image/donation.jpg" style="width: 100%;margin-top: 22px;">
+                    <img src="https://gitee.com/threefish/NutzCodeInsight/raw/master/image/donation.jpg" style="width: 100%;">
                 </div>
             </div>
         </div>
