--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/error/customError.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/error/customError.html
@@ -6,12 +6,13 @@
     <title>500 - 系统错误</title>
     <style>
         body{font-size: 14px;font-family: 'helvetica neue',tahoma,arial,'hiragino sans gb','microsoft yahei','Simsun',sans-serif; background-color:#fff; color:#808080;}
-        .wrap{margin:200px auto;width:510px;}
+        .wrap{margin:0 auto;width:800px;margin-top: 10%;}
         td{text-align:left; padding:2px 10px;}
         td.header{font-size:22px; padding-bottom:10px; color:#000;}
         td.check-info{padding-top:20px;}
         a{color:#328ce5; text-decoration:none;}
         a:hover{text-decoration:underline;}
+        pre{overflow: auto;width: 800px;margin: auto;border: 1px #cdcdcd solid;background: #f5f0f0;padding: 10px;max-height: 200px;}
     </style>
 </head>
 <body>
